# Face-recognition

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
docs/: evaluation-methodology.md
docs/superpowers/plans/: 2026-05-21-m1-core-cli-implementation.md  2026-05-21-m2-evaluation-framework.md  2026-05-21-m4-realtime-web.md  2026-05-21-m5-frontend.md  2026-05-21-m6-demo-defense.md
docs/superpowers/specs/: 2026-05-21-face-recognition-design.md
reports/: ablation_results.csv  summary.md
scripts/: prepare_lfw_dataset.py
src/face_recognition/api/: cli.py  dependencies.py  routes_persons.py  routes_stream.py  server.py
src/face_recognition/api/static/: index.html
src/face_recognition/application/: recognize_face.py  recognize_frame.py  register_face.py  template_matrix.py
src/face_recognition/application/strategies/: all_vectors.py  base.py  kmeans_k3.py  manual_three.py  mean_all.py  random_one.py
src/face_recognition/domain/: entities.py  errors.py  interfaces.py
src/face_recognition/evaluation/: data_split.py  embedder.py  lfw_loader.py  metrics.py  pair_generator.py  reports.py  run_ablation.py  types.py
src/face_recognition/infrastructure/: camera_capture.py  config_loader.py  frame_renderer.py  insightface_pipeline.py  iou_tracker.py  sqlite_repository.py
tests/: conftest.py
tests/integration/: test_register_recognize_e2e.py  test_run_ablation.py
tests/integration/api/: test_error_handling.py  test_routes_persons.py  test_server_smoke.py
tests/unit/: test_config_loader.py  test_entities.py  test_errors.py  test_metrics.py  test_recognize_face.py  test_register_face.py  test_sqlite_repository.py  test_strategies.py
tests/unit/application/: test_recognize_frame.py  test_template_matrix.py
tests/unit/evaluation/: test_data_split.py  test_embedder.py  test_lfw_loader.py  test_metrics.py  test_pair_generator.py  test_reports.py  test_types.py
tests/unit/infrastructure/: test_camera_capture.py  test_frame_renderer.py  test_iou_tracker.py
