[project]
name = "face-recognition"
version = "0.1.0"
description = "基于 ArcFace 的开放集人脸识别系统（本科期末项目）"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "dww" }]
keywords = ["face-recognition", "arcface", "insightface", "open-set"]

dependencies = [
    # 模型与推理
    "insightface>=0.7.3",
    # GPU 推理后端（Linux / Windows）
    "onnxruntime-gpu>=1.18.0; sys_platform != 'darwin'",
    # CPU 后备（macOS：onnxruntime-gpu 在 arm64 上没有 wheel；Apple Silicon 上 onnxruntime 自带 CoreML 加速）
    "onnxruntime>=1.18.0; sys_platform == 'darwin'",
    # 图像 / 视频
    "opencv-python>=4.10.0",
    "pillow>=10.0.0",
    # 数值计算与 ML
    "numpy>=1.26.0,<2.0.0",
    "scikit-learn>=1.4.0",
    # Web 服务
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    # 配置 / CLI
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    # 评估报告
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/face_recognition"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
# 不开 strict——strict 会顺带打开 disallow_any_generics，
# 让 np.ndarray 这种"约定俗成裸写"的泛型类一律报错，反而违反 ML 项目的阅读直觉。
# 这里只保留最有价值的一条：函数必须写参数和返回值类型注解。
disallow_untyped_defs = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "gpu: 需要 GPU 的集成测试（用 -m 'not gpu' 跳过）",
    "slow: 耗时 > 1 秒的测试",
]
addopts = "-ra --strict-markers"
